force-app/main/default/objects/zsforce1set__x/zsforce1set__x.object-meta.xml
<CustomObject>
    <externalDataSource>SAP</externalDataSource>
    <externalName>zsforce1set</externalName>
    <label>zsforce1set</label>
    <pluralLabel>zsforce1set</pluralLabel>
</CustomObject>