force-app/main/default/objects/zsforce1set__x/fields/Ernam__c.field-meta.xml
<CustomField>
    <fullName>Ernam__c</fullName>
    <description>Ernam</description>
    <externalDeveloperName>Ernam</externalDeveloperName>
    <label>Ernam</label>
    <length>12</length>
    <type>Text</type>
</CustomField>