force-app/main/default/objects/zsforce1set__x/fields/id18__c.field-meta.xml
<CustomField>
    <fullName>id18__c</fullName>
    <description>id18</description>
    <externalDeveloperName>id18</externalDeveloperName>
    <label>id18</label>
    <length>30</length>
    <type>Text</type>
</CustomField>