force-app/main/default/objects/zsforce1set__x/fields/sapky__c.field-meta.xml
<CustomField>
    <fullName>sapky__c</fullName>
    <description>sapky</description>
    <externalDeveloperName>sapky</externalDeveloperName>
    <label>sapky</label>
    <length>10</length>
    <type>Text</type>
</CustomField>