force-app/main/default/objects/zsforce1set__x/fields/SFOBJ__c.field-meta.xml
<CustomField>
    <fullName>SFOBJ__c</fullName>
    <description>SFOBJ</description>
    <externalDeveloperName>SFOBJ</externalDeveloperName>
    <label>SFOBJ</label>
    <length>1</length>
    <type>Text</type>
</CustomField>