force-app/main/default/objects/zsforce1set__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>DisplayUrl</columns>
    <columns>Erdat__c</columns>
    <columns>Ernam__c</columns>
    <columns>id18__c</columns>
    <columns>sapky__c</columns>
    <columns>SFOBJ__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>